--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,23 @@
       "loose": true,
       "modules": false
     }]
-  ]
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+    "babel-plugin-syntax-dynamic-import",
+    "babel-plugin-dynamic-import-webpack",
+    "babel-plugin-transform-class-properties"
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    },
+    "server": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
