--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-register": "6.24.1",
-    "file-loader": "^1.1.11",
+    "google-map-react": "^0.34.0",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
+    "prop-types": "^15.6.1",
     "react": "15.5.4",
     "react-addons-perf": "15.4.2",
     "react-dom": "15.5.4",
-    "react-redux": "5.0.5",
-    "url-loader": "^1.0.1",
     "webpack": "2.6.1",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0"
@@ -51,12 +50,14 @@
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^1.1.11",
     "nodemon": "1.11.0",
     "prettier": "1.3.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack-dev-server": "2.4.5"
   }
 }
