--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.2.0",
     "nodemon": "1.11.0",
     "prettier": "1.3.1",
     "react-hot-loader": "3.0.0-beta.6",
