--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-register": "6.24.1",
+    "fontmin": "^0.9.6",
     "google-map-react": "^0.34.0",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
